--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --base=https://dwu.github.io/pad/",
     "preview": "vite preview"
   },
   "devDependencies": {
